test_regress/t/t_dpi_result_type_bad.out
%Error: t/t_dpi_result_type_bad.v:80:39: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   80 |   import "DPI-C" function bit [ 32:0] i_array_2_state_33();
      |                                       ^~~~~~~~~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_dpi_result_type_bad.v:81:39: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   81 |   import "DPI-C" function bit [ 63:0] i_array_2_state_64();
      |                                       ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:82:39: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   82 |   import "DPI-C" function bit [ 64:0] i_array_2_state_65();
      |                                       ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:83:39: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   83 |   import "DPI-C" function bit [127:0] i_array_2_state_128();
      |                                       ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:86:47: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   86 |   import "DPI-C" function array_2_state_33_t  i_array_2_state_33_t();
      |                                               ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:87:47: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   87 |   import "DPI-C" function array_2_state_64_t  i_array_2_state_64_t();
      |                                               ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:88:47: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   88 |   import "DPI-C" function array_2_state_65_t  i_array_2_state_65_t();
      |                                               ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:89:47: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   89 |   import "DPI-C" function array_2_state_128_t i_array_2_state_128_t();
      |                                               ^~~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:92:46: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   92 |   import "DPI-C" function struct_2_state_33  i_struct_2_state_33();
      |                                              ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:93:46: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   93 |   import "DPI-C" function struct_2_state_64  i_struct_2_state_64();
      |                                              ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:94:46: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   94 |   import "DPI-C" function struct_2_state_65  i_struct_2_state_65();
      |                                              ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:95:46: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   95 |   import "DPI-C" function struct_2_state_128 i_struct_2_state_128();
      |                                              ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:98:45: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   98 |   import "DPI-C" function union_2_state_33  i_union_2_state_33();
      |                                             ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:99:45: DPI function may not return a > 32 bits wide type other than basic types.
                                       : ... Suggest make it an output argument instead?
   99 |   import "DPI-C" function union_2_state_64  i_union_2_state_64();
      |                                             ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:100:45: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  100 |   import "DPI-C" function union_2_state_65  i_union_2_state_65();
      |                                             ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:101:45: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  101 |   import "DPI-C" function union_2_state_128 i_union_2_state_128();
      |                                             ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:104:35: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  104 |   import "DPI-C" function integer i_integer();
      |                                   ^~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:107:41: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  107 |   import "DPI-C" function logic [  0:0] i_array_4_state_1();
      |                                         ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:108:41: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  108 |   import "DPI-C" function logic [  1:0] i_array_4_state_2();
      |                                         ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:109:41: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  109 |   import "DPI-C" function logic [  7:0] i_array_4_state_8();
      |                                         ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:110:41: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  110 |   import "DPI-C" function logic [  8:0] i_array_4_state_9();
      |                                         ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:111:41: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  111 |   import "DPI-C" function logic [ 15:0] i_array_4_state_16();
      |                                         ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:112:41: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  112 |   import "DPI-C" function logic [ 16:0] i_array_4_state_17();
      |                                         ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:113:41: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  113 |   import "DPI-C" function logic [ 31:0] i_array_4_state_32();
      |                                         ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:114:41: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  114 |   import "DPI-C" function logic [ 32:0] i_array_4_state_33();
      |                                         ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:115:41: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  115 |   import "DPI-C" function logic [ 63:0] i_array_4_state_64();
      |                                         ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:116:41: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  116 |   import "DPI-C" function logic [ 64:0] i_array_4_state_65();
      |                                         ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:117:41: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  117 |   import "DPI-C" function logic [127:0] i_array_4_state_128();
      |                                         ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:120:47: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  120 |   import "DPI-C" function array_4_state_1_t   i_array_4_state_1_t();
      |                                               ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:121:47: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  121 |   import "DPI-C" function array_4_state_2_t   i_array_4_state_2_t();
      |                                               ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:122:47: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  122 |   import "DPI-C" function array_4_state_8_t   i_array_4_state_8_t();
      |                                               ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:123:47: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  123 |   import "DPI-C" function array_4_state_9_t   i_array_4_state_9_t();
      |                                               ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:124:47: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  124 |   import "DPI-C" function array_4_state_16_t  i_array_4_state_16_t();
      |                                               ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:125:47: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  125 |   import "DPI-C" function array_4_state_17_t  i_array_4_state_17_t();
      |                                               ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:126:47: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  126 |   import "DPI-C" function array_4_state_32_t  i_array_4_state_32_t();
      |                                               ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:127:47: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  127 |   import "DPI-C" function array_4_state_33_t  i_array_4_state_33_t();
      |                                               ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:128:47: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  128 |   import "DPI-C" function array_4_state_64_t  i_array_4_state_64_t();
      |                                               ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:129:47: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  129 |   import "DPI-C" function array_4_state_65_t  i_array_4_state_65_t();
      |                                               ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:130:47: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  130 |   import "DPI-C" function array_4_state_128_t i_array_4_state_128_t();
      |                                               ^~~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:133:46: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  133 |   import "DPI-C" function struct_4_state_1   i_struct_4_state_1();
      |                                              ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:134:46: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  134 |   import "DPI-C" function struct_4_state_2   i_struct_4_state_2();
      |                                              ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:135:46: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  135 |   import "DPI-C" function struct_4_state_8   i_struct_4_state_8();
      |                                              ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:136:46: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  136 |   import "DPI-C" function struct_4_state_9   i_struct_4_state_9();
      |                                              ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:137:46: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  137 |   import "DPI-C" function struct_4_state_16  i_struct_4_state_16();
      |                                              ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:138:46: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  138 |   import "DPI-C" function struct_4_state_17  i_struct_4_state_17();
      |                                              ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:139:46: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  139 |   import "DPI-C" function struct_4_state_32  i_struct_4_state_32();
      |                                              ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:140:46: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  140 |   import "DPI-C" function struct_4_state_33  i_struct_4_state_33();
      |                                              ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:141:46: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  141 |   import "DPI-C" function struct_4_state_64  i_struct_4_state_64();
      |                                              ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:142:46: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  142 |   import "DPI-C" function struct_4_state_65  i_struct_4_state_65();
      |                                              ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:143:46: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  143 |   import "DPI-C" function struct_4_state_128 i_struct_4_state_128();
      |                                              ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:146:45: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  146 |   import "DPI-C" function union_4_state_1   i_union_4_state_1();
      |                                             ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:147:45: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  147 |   import "DPI-C" function union_4_state_2   i_union_4_state_2();
      |                                             ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:148:45: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  148 |   import "DPI-C" function union_4_state_8   i_union_4_state_8();
      |                                             ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:149:45: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  149 |   import "DPI-C" function union_4_state_9   i_union_4_state_9();
      |                                             ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:150:45: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  150 |   import "DPI-C" function union_4_state_16  i_union_4_state_16();
      |                                             ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:151:45: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  151 |   import "DPI-C" function union_4_state_17  i_union_4_state_17();
      |                                             ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:152:45: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  152 |   import "DPI-C" function union_4_state_32  i_union_4_state_32();
      |                                             ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:153:45: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  153 |   import "DPI-C" function union_4_state_33  i_union_4_state_33();
      |                                             ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:154:45: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  154 |   import "DPI-C" function union_4_state_64  i_union_4_state_64();
      |                                             ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:155:45: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  155 |   import "DPI-C" function union_4_state_65  i_union_4_state_65();
      |                                             ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:156:45: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  156 |   import "DPI-C" function union_4_state_128 i_union_4_state_128();
      |                                             ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:246:24: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  246 |   function bit [ 32:0] e_array_2_state_33();  return 0; endfunction
      |                        ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:247:24: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  247 |   function bit [ 63:0] e_array_2_state_64();  return 0; endfunction
      |                        ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:248:24: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  248 |   function bit [ 64:0] e_array_2_state_65();  return 0; endfunction
      |                        ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:249:24: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  249 |   function bit [127:0] e_array_2_state_128(); return 0; endfunction
      |                        ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:252:32: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  252 |   function array_2_state_33_t  e_array_2_state_33_t();  return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:253:32: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  253 |   function array_2_state_64_t  e_array_2_state_64_t();  return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:254:32: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  254 |   function array_2_state_65_t  e_array_2_state_65_t();  return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:255:32: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  255 |   function array_2_state_128_t e_array_2_state_128_t(); return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:258:31: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  258 |   function struct_2_state_33  e_struct_2_state_33();  return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:259:31: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  259 |   function struct_2_state_64  e_struct_2_state_64();  return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:260:31: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  260 |   function struct_2_state_65  e_struct_2_state_65();  return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:261:31: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  261 |   function struct_2_state_128 e_struct_2_state_128(); return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:264:30: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  264 |   function union_2_state_33  e_union_2_state_33();  return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:265:30: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  265 |   function union_2_state_64  e_union_2_state_64();  return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:266:30: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  266 |   function union_2_state_65  e_union_2_state_65();  return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:267:30: DPI function may not return a > 32 bits wide type other than basic types.
                                        : ... Suggest make it an output argument instead?
  267 |   function union_2_state_128 e_union_2_state_128(); return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:270:20: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  270 |   function integer e_integer(); return 0; endfunction
      |                    ^~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:273:26: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  273 |   function logic [  0:0] e_array_4_state_1();   return 0; endfunction
      |                          ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:274:26: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  274 |   function logic [  1:0] e_array_4_state_2();   return 0; endfunction
      |                          ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:275:26: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  275 |   function logic [  7:0] e_array_4_state_8();   return 0; endfunction
      |                          ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:276:26: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  276 |   function logic [  8:0] e_array_4_state_9();   return 0; endfunction
      |                          ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:277:26: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  277 |   function logic [ 15:0] e_array_4_state_16();  return 0; endfunction
      |                          ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:278:26: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  278 |   function logic [ 16:0] e_array_4_state_17();  return 0; endfunction
      |                          ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:279:26: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  279 |   function logic [ 31:0] e_array_4_state_32();  return 0; endfunction
      |                          ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:280:26: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  280 |   function logic [ 32:0] e_array_4_state_33();  return 0; endfunction
      |                          ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:281:26: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  281 |   function logic [ 63:0] e_array_4_state_64();  return 0; endfunction
      |                          ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:282:26: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  282 |   function logic [ 64:0] e_array_4_state_65();  return 0; endfunction
      |                          ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:283:26: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  283 |   function logic [127:0] e_array_4_state_128(); return 0; endfunction
      |                          ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:286:32: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  286 |   function array_4_state_1_t   e_array_4_state_1_t();   return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:287:32: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  287 |   function array_4_state_2_t   e_array_4_state_2_t();   return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:288:32: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  288 |   function array_4_state_8_t   e_array_4_state_8_t();   return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:289:32: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  289 |   function array_4_state_9_t   e_array_4_state_9_t();   return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:290:32: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  290 |   function array_4_state_16_t  e_array_4_state_16_t();  return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:291:32: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  291 |   function array_4_state_17_t  e_array_4_state_17_t();  return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:292:32: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  292 |   function array_4_state_32_t  e_array_4_state_32_t();  return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:293:32: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  293 |   function array_4_state_33_t  e_array_4_state_33_t();  return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:294:32: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  294 |   function array_4_state_64_t  e_array_4_state_64_t();  return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:295:32: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  295 |   function array_4_state_65_t  e_array_4_state_65_t();  return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:296:32: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  296 |   function array_4_state_128_t e_array_4_state_128_t(); return 0; endfunction
      |                                ^~~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:299:31: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  299 |   function struct_4_state_1   e_struct_4_state_1();   return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:300:31: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  300 |   function struct_4_state_2   e_struct_4_state_2();   return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:301:31: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  301 |   function struct_4_state_8   e_struct_4_state_8();   return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:302:31: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  302 |   function struct_4_state_9   e_struct_4_state_9();   return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:303:31: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  303 |   function struct_4_state_16  e_struct_4_state_16();  return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:304:31: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  304 |   function struct_4_state_17  e_struct_4_state_17();  return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:305:31: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  305 |   function struct_4_state_32  e_struct_4_state_32();  return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:306:31: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  306 |   function struct_4_state_33  e_struct_4_state_33();  return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:307:31: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  307 |   function struct_4_state_64  e_struct_4_state_64();  return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:308:31: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  308 |   function struct_4_state_65  e_struct_4_state_65();  return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:309:31: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  309 |   function struct_4_state_128 e_struct_4_state_128(); return 0; endfunction
      |                               ^~~~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:312:30: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  312 |   function union_4_state_1   e_union_4_state_1();   return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:313:30: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  313 |   function union_4_state_2   e_union_4_state_2();   return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:314:30: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  314 |   function union_4_state_8   e_union_4_state_8();   return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:315:30: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  315 |   function union_4_state_9   e_union_4_state_9();   return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:316:30: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  316 |   function union_4_state_16  e_union_4_state_16();  return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:317:30: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  317 |   function union_4_state_17  e_union_4_state_17();  return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:318:30: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  318 |   function union_4_state_32  e_union_4_state_32();  return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:319:30: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  319 |   function union_4_state_33  e_union_4_state_33();  return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:320:30: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  320 |   function union_4_state_64  e_union_4_state_64();  return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:321:30: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  321 |   function union_4_state_65  e_union_4_state_65();  return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~~
%Error: t/t_dpi_result_type_bad.v:322:30: DPI function may not return a 4-state type other than a single 'logic' (IEEE 1800-2023 35.5.5)
  322 |   function union_4_state_128 e_union_4_state_128(); return 0; endfunction
      |                              ^~~~~~~~~~~~~~~~~~~
%Error: Exiting due to
